# preprint-bot

./: .gitignore  FetchingData.ipynb  LICENSE  README.md  app.py  conda_wrapper.sh  config.py  daily_pipeline.sh  database_schema.sql  date_pipeline.py  dummy_config.py  embed_papers.py  example.json  extract_grobid.py  finetune_data.jsonl  fintune_gpt2.py  gpt2_finetune.sub  grobid_parser.py  insert_script.py  jobs.json  main.py  pipeline.py  pytest.ini  query_arxiv.py  query_arxiv_keyword.py  ranked_matches.json  readme.txt  requirements-ci.txt  requirements.txt  requiremnts.txt  schemas.py  send_recommendations_email.py  setup.cfg  setup.py  setup_database.sh  similarity_matcher.py  summarization-script.py  summarization.py  summarization_script.py  test.py  (+7 more)
E2E/: embed_papers.py  query_arxiv.py  requirements.txt
api/: config.py  database.py  main.py  requirements.txt  schemas.py
django_site/: .gitignore  README.md  manage.py  requirements.txt
examples/: example_recommendation.json  llm_summaries.json  low_matches.json  medium_mateches.json
main/: config.py  download_arxiv_pdfs.py  embed_papers.py  fetch_arxiv.py  grobid_parser.py  main.py  process_user_pdfs.py  requirements.txt  similarity_matcher.py
routes/: __init__.py  auth.py  corpora.py  emails.py  embeddings.py  papers.py  profile_corpora.py  profiles.py  progress_tracker.py  recommendation_runs.py  recommendations.py  sections.py  summaries.py  uploads.py  users.py
services/: email_service.py
similarity pipeline/: fetch_data.ipynb  ranked_matches.json
summaries/: paper 1_output_summary.txt  (+13 more)
(+103 files in other folders)
