[metadata]
name = preprint-bot
version = 0.1.0
description = End-to-end arXiv preprint recommendation system
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = you@example.com
url = https://github.com/yourusername/preprint-bot
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires =
    requests
    feedparser
    lxml
    nltk
    transformers
    sentence-transformers
    faiss-cpu
    spacy
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    arxiv-recommender=preprint-bot.pipeline:main